--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.ewch.mockito.app</groupId>
-    <artifactId>app-mockito</artifactId>
+    <artifactId>mockito-app</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
